--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/ssr": "^17.2.3",
     "bootstrap": "^5.3.3",
     "express": "^4.19.2",
+    "gh-pages": "^6.1.1",
     "ngx-bootstrap": "^12.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
