--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-server": "^17.2.0",
     "@angular/router": "^17.2.0",
     "@angular/ssr": "^17.2.3",
+    "@emailjs/browser": "^4.4.1",
     "bootstrap": "^5.3.3",
     "express": "^4.19.2",
     "gh-pages": "^6.1.1",
