--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "@angular/router": "^18.2.13",
     "@angular/ssr": "^18.2.12",
     "@emailjs/browser": "^4.4.1",
+    "@ngx-translate/core": "^16.0.4",
+    "@ngx-translate/http-loader": "^16.0.1",
     "bootstrap": "^5.3.3",
     "express": "^4.21.2",
     "gh-pages": "^6.1.1",
-    "ngx-bootstrap": "^12.0.0",
+    "ngx-bootstrap": "^18.1.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
